tests/diagnostics/packages/imports/unknown_member/expect.txt
# exit: 1
main.coppice:1:29: error: imported symbol 'Missing' is not declared in package 'workspace/lib/auth'
  import workspace/lib/auth { Missing }
                              ^
